# freehand

./: .gitignore  AGENTS.md  CACHE.md  Cargo.toml  MEMORY.md  Makefile  note.md
.agents/skills/freehand-dev/: SKILL.md
.agents/skills/provider-protocols/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
apps/freehand-android/: README.md  build.gradle.kts  settings.gradle.kts
apps/freehand-android/app/: build.gradle.kts
apps/freehand-cli/: Cargo.toml
apps/freehand-cli/src/: main.rs
apps/freehand-cli/tests/: config_startup.rs
apps/freehand-daemon/: Cargo.toml
apps/freehand-daemon/src/: main.rs
apps/freehand-server/: Cargo.toml
apps/freehand-server/assets/: theme.css  theme.js  webui.css  webui.js
apps/freehand-server/assets/mocks/android/: mobile-mock.css  mobile-mock.html
apps/freehand-server/src/: assets.rs  lib.rs  main.rs  page.rs
crates/freehand-blocks/: Cargo.toml
crates/freehand-blocks/src/: lib.rs  rewrite_policy.rs
crates/freehand-config/: Cargo.toml
crates/freehand-config/src/: lib.rs
crates/freehand-contracts/: Cargo.toml
crates/freehand-contracts/src/: lib.rs
crates/freehand-debug/: Cargo.toml
crates/freehand-debug/src/: lib.rs
crates/freehand-gates/: Cargo.toml
crates/freehand-gates/src/: lib.rs
crates/freehand-metadata/: Cargo.toml
crates/freehand-metadata/src/: lib.rs
crates/freehand-node/: Cargo.toml
crates/freehand-node/src/: lib.rs
crates/freehand-provider-anthropic/: Cargo.toml
crates/freehand-provider-anthropic/fixtures/: minimonth_messages_single.json  minimonth_messages_stream.sse
crates/freehand-provider-anthropic/src/: lib.rs
crates/freehand-provider-core/: Cargo.toml
crates/freehand-provider-core/src/: lib.rs
crates/freehand-provider-openai/: Cargo.toml
crates/freehand-provider-openai/src/: lib.rs
crates/freehand-reason/: Cargo.toml
crates/freehand-reason/src/: lib.rs  persistence.rs  rewrite_runtime.rs  session_history.rs
crates/freehand-runtime/: Cargo.toml
crates/freehand-runtime/src/: lib.rs
crates/freehand-testkit/: Cargo.toml
crates/freehand-testkit/src/: lib.rs
crates/freehand-tools/: Cargo.toml
crates/freehand-tools/src/: lib.rs
crates/freehand-ui-protocol/: Cargo.toml
crates/freehand-ui-protocol/src/: lib.rs
docs/architecture/: README.md  architecture-gaps.md  debug-and-trace.md  dev-debug-workflow.md  dev-gates.md  feature-map.md  function-map-spec.md  test-strategy.md  workspace-layout.md
docs/config/: config-directories.md
docs/debug/: README.md  debug-directories.md  debug-playbook.md
docs/design/: android-client-v1-execution.md  config-core-design.md  contracts-core-design.md  debug-and-observability-design.md  debug-core-design.md  design-doc-index.md  metadata-core-design.md  multi-platform-ui-architecture.md  node-master-slave-design.md  provider-adapter-design.md  provider-and-reasoning-design.md  provider-semantic-design.md  reason-context-planner-design.md  reason-persistence-design.md  reason-rewrite-policy-design.md  reason-turn-design.md  runtime-checkpoint-rewind-design.md  runtime-command-dispatch-design.md  runtime-daemon-design.md  system-architecture-overview.md  tool-preview-design.md  tool-registry-design.md  ui-and-runtime-topology.md  ui-protocol-design.md  webui-console-proposal.md
docs/function-maps/: README.md  app.android-client.md  app.cli-live-turn.md  app.cli-runtime-smoke.md  app.runtime-daemon.md  app.webui-smoke.md  config.core.md  contracts.core.md  debug.core.md  foundation.workspace.md  metadata.core.md  node.master-slave.md  provider.anthropic-adapter.md  provider.openai-adapter.md  provider.reason-live-bridge.md  provider.semantic.md  reason.context-planner.md  reason.persistence.md  reason.rewrite-policy.md  reason.session-history.md  reason.turn.md  runtime.checkpoint-rewind.md  runtime.ui-command-dispatch.md  tool.preview.md  tool.registry.md  ui.protocol.md
docs/goals/: live-reason-e2e-tool-plan.md  mainline-migration-closeout-plan.md  stability-quality-plan.md  tool-registry-first-tools-plan.md  ui-protocol-webui-next-step-plan.md
docs/mainline-calls/: README.md  app.android-client.json  app.cli-live-turn.json  app.cli-runtime-smoke.json  app.runtime-daemon.json  app.webui-smoke.json  config.core.json  contracts.core.json  debug.core.json  foundation.workspace.json  metadata.core.json  node.master-slave.json  provider.anthropic-adapter.json  provider.openai-adapter.json  provider.reason-live-bridge.json  provider.semantic.json  reason.context-planner.json  reason.persistence.json  reason.rewrite-policy.json  reason.session-history.json  reason.turn.json  runtime.checkpoint-rewind.json  runtime.ui-command-dispatch.json  tool.preview.json  tool.registry.json  ui.protocol.json
docs/prototypes/: README.md
docs/runtime/: runtime-directories.md  runtime-home.md
docs/testing/: app.android-client.md  app.cli-live-turn.md  app.cli-runtime-smoke.md  app.runtime-daemon.md  app.webui-smoke.md  config.core.md  contracts.core.md  debug.core.md  foundation.workspace.md  metadata.core.md  node.master-slave.md  provider.anthropic-adapter.md  provider.openai-adapter.md  provider.reason-live-bridge.md  provider.semantic.md  reason.context-planner.md  reason.persistence.md  reason.rewrite-policy.md  reason.session-history.md  reason.turn.md  runtime.checkpoint-rewind.md  runtime.ui-command-dispatch.md  tool.preview.md  tool.registry.md  ui.protocol.md
docs/wiki/: README.md  app.android-client.md  app.cli-live-turn.md  app.cli-runtime-smoke.md  app.runtime-daemon.md  app.webui-smoke.md  config.core.md  contracts.core.md  debug.core.md  foundation.workspace.md  metadata.core.md  node.master-slave.md  provider.anthropic-adapter.md  provider.openai-adapter.md  provider.reason-live-bridge.md  provider.semantic.md  reason.context-planner.md  reason.persistence.md  reason.rewrite-policy.md  reason.session-history.md  reason.turn.md  runtime.checkpoint-rewind.md  runtime.ui-command-dispatch.md  tool.preview.md  tool.registry.md  ui.protocol.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+69 files in other folders)
