[package]
name = "freehand-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
freehand-contracts = { path = "../../crates/freehand-contracts" }
freehand-config = { path = "../../crates/freehand-config" }
freehand-node = { path = "../../crates/freehand-node" }
freehand-ui-protocol = { path = "../../crates/freehand-ui-protocol" }
