[package]
name = "freehand-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["json", "http1", "tokio"] }
futures-util = "0.3"
freehand-contracts = { path = "../../crates/freehand-contracts" }
freehand-ui-protocol = { path = "../../crates/freehand-ui-protocol" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
