[package]
name = "freehand-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
freehand-contracts = { path = "../freehand-contracts" }
freehand-debug = { path = "../freehand-debug" }
freehand-metadata = { path = "../freehand-metadata" }
freehand-reason = { path = "../freehand-reason" }
freehand-ui-protocol = { path = "../freehand-ui-protocol" }
serde_json = "1"
thiserror = "2.0.17"
