[package]
name = "freehand-provider-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
freehand-blocks = { path = "../freehand-blocks" }
freehand-provider-core = { path = "../freehand-provider-core" }
freehand-contracts = { path = "../freehand-contracts" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
