[package]
name = "freehand-reason"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
freehand-contracts = { path = "../freehand-contracts" }
freehand-blocks = { path = "../freehand-blocks" }
freehand-provider-core = { path = "../freehand-provider-core" }
freehand-ui-protocol = { path = "../freehand-ui-protocol" }

