[package]
name = "freehand-ui-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
freehand-contracts = { path = "../freehand-contracts" }
freehand-debug = { path = "../freehand-debug" }
freehand-blocks = { path = "../freehand-blocks" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
